# Move-Order-Neural-Network

./: .gitattributes  .gitignore  Explainer_tmp.py  attention_based_matrix_64x64.pt  create_set.py  matrix_moves.py  notes.txt  tmp.py  training.ipynb
Creazione_geometria/: chess_rotate_analysis_v2.py  chess_rotate_analysis_v3.py  chess_rotate_analysis_v4.py  chess_rotate_v2.py  chess_rotate_v3.py  chess_rotate_v4.py
MHA/: attention_based_matrix_64x64.pt  interpret_mha.ipynb  train_MHA.py
MLChess/: README.md  pyproject.toml
MLChess/MLChess/: __init__.py  data_organization_tensor.py  graph_representation.py  my_resnet.py
MLChess/MLChess.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
MLChess/MLChess/Models/: MHA.py  Pointer_model.py  graph_models.py  mcts.py  my_resnet.py  pointer_mcts_batched.py
MLChess/MLChess/Representation/: Siamese_Autoencoder_Representation.py  data_organization_tensor.py  graph_representation.py  new_graph_representation.py  pointer_dataset.py  pointer_graph_dataset.py
MLChess/MLChess/Representation/With_Waves/: chess_fields.py  data_organization_tensor_fields.py  dataset_with_precomputed_fields.py  new_graph_representation_fields.py  precompute_fields.py
MLChess/MLChess/Understanding/: Chess_Pointer_Explainer.py
Pointer/: Check_value.py  Explain_model.py  Observe_game.py  attention_based_matrix_64x64.pt  check_balance_dataset.py  entropy.py  eval_puzzles.py  filter_lichess.py  filter_problems.py  puzzle_split.py  test_mcts_signs.py  train_alphazero.py  train_alphazero_async.py  train_alphazero_problems.py  train_alphazero_v2.py  train_alphazero_v3.py  train_pointer.py  (+6 more)
(+23 files in other folders)
