[build-system]
requires = ["setuptools>=61.0", "torch>=2.8.0", "torchvision>=0.23.0", "pandas>=2.3.2", "chess>=1.11.2"]
build-backend = "setuptools.build_meta"

[project]
name = "MLChess"
version = "0.1.0"
description = "Some functions and classes useful for machine learning in the case of chess"
authors = [{ name="Marco", email="marcochiorri2003@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
