[build-system]
requires = ["setuptools>=61.0", "torch>=2.8.0", "torchvision>=0.23.0", "pandas>=2.3.2", "chess>=1.11.2", "torch-geometric>=2.6.1", "numpy>=2.1.2", "scikit-learn>=1.7.1"]
build-backend = "setuptools.build_meta"

[project]
name = "MLChess"
version = "0.2.4"
description = "Some functions and classes useful for machine learning in the case of chess"
authors = [{ name="Marco", email="marcochiorri2003@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
